public/platform/v0.12/_sources/reference/tmlt/analytics/query_expr/index.rst.txt


..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*****************
query_expr
*****************

.. py:module:: tmlt.analytics.query_expr

.. autoapi-nested-parse::

   Building blocks of the Tumult Analytics query language. Not for direct use.

   Defines the :class:`QueryExpr` class, which represents expressions in the
   Tumult Analytics query language. QueryExpr and its subclasses should not be
   directly constructed or deconstructed by most users; interfaces such as
   :class:`tmlt.analytics.query_builder.QueryBuilder` to create them and
   :class:`tmlt.analytics.session.Session` to consume them provide more
   user-friendly features.









Data
====


.. py:data:: Row
   

   Type alias for dictionary with string keys.



Classes
=======

.. list-table::

   * - :class:`.CountMechanism`
     - Possible mechanisms for the count() aggregation.
   * - :class:`.CountDistinctMechanism`
     - Enumerating the possible mechanisms used for the count_distinct aggregation.
   * - :class:`.SumMechanism`
     - Possible mechanisms for the sum() aggregation.
   * - :class:`.AverageMechanism`
     - Possible mechanisms for the average() aggregation.
   * - :class:`.VarianceMechanism`
     - Possible mechanisms for the variance() aggregation.
   * - :class:`.StdevMechanism`
     - Possible mechanisms for the stdev() aggregation.
   * - :class:`.QueryExpr`
     - A query expression, base class for relational operators.
   * - :class:`.PrivateSource`
     - Loads the private source.
   * - :class:`.GetGroups`
     - Returns groups based on the geometric partition selection for these columns.
   * - :class:`.GetBounds`
     - Returns approximate upper and lower bounds of a column.
   * - :class:`.Rename`
     - Returns the dataframe with columns renamed.
   * - :class:`.Filter`
     - Returns the subset of the rows that satisfy the condition.
   * - :class:`.Select`
     - Returns a subset of the columns.
   * - :class:`.Map`
     - Applies a map function to each row of a relation.
   * - :class:`.FlatMap`
     - Applies a flat map function to each row of a relation.
   * - :class:`.JoinPrivate`
     - Returns the join of two private tables.
   * - :class:`.JoinPublic`
     - Returns the join of a private and public table.
   * - :class:`.AnalyticsDefault`
     - Default values for each type of column in Tumult Analytics.
   * - :class:`.ReplaceNullAndNan`
     - Returns data with null and NaN expressions replaced by a default.
   * - :class:`.ReplaceInfinity`
     - Returns data with +inf and -inf expressions replaced by defaults.
   * - :class:`.DropNullAndNan`
     - Returns data with rows that contain null or NaN value dropped.
   * - :class:`.DropInfinity`
     - Returns data with rows that contain +inf/-inf dropped.
   * - :class:`.EnforceConstraint`
     - Enforces a constraint on the data.
   * - :class:`.GroupByCount`
     - Returns the count of each combination of the groupby domains.
   * - :class:`.GroupByCountDistinct`
     - Returns the count of distinct rows in each groupby domain value.
   * - :class:`.GroupByQuantile`
     - Returns the quantile of a column for each combination of the groupby domains.
   * - :class:`.GroupByBoundedSum`
     - Returns the bounded sum of a column for each combination of groupby domains.
   * - :class:`.GroupByBoundedAverage`
     - Returns bounded average of a column for each combination of groupby domains.
   * - :class:`.GroupByBoundedVariance`
     - Returns bounded variance of a column for each combination of groupby domains.
   * - :class:`.GroupByBoundedSTDEV`
     - Returns bounded stdev of a column for each combination of groupby domains.
   * - :class:`.SuppressAggregates`
     - Remove all counts that are less than the threshold.
   * - :class:`.QueryExprVisitor`
     - A base class for implementing visitors for :class:`QueryExpr`.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CountMechanism

   Bases: :class:`enum.Enum`

   Possible mechanisms for the count() aggregation.

   Currently, the
   :meth:`~tmlt.analytics.query_builder.GroupedQueryBuilder.count` aggregation
   uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Double-sided geometric noise is used.

   .. py:attribute:: GAUSSIAN
      

      The discrete Gaussian mechanism is used. Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CountDistinctMechanism

   Bases: :class:`enum.Enum`

   Enumerating the possible mechanisms used for the count_distinct aggregation.

   Currently, the
   :meth:`~tmlt.analytics.query_builder.GroupedQueryBuilder.count_distinct`
   aggregation uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Double-sided geometric noise is used.

   .. py:attribute:: GAUSSIAN
      

      The discrete Gaussian mechanism is used. Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SumMechanism

   Bases: :class:`enum.Enum`

   Possible mechanisms for the sum() aggregation.

   Currently, the
   :meth:`~.tmlt.analytics.query_builder.GroupedQueryBuilder.sum`
   aggregation uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Laplace and/or double-sided geometric noise is used, depending on the
      column type.

   .. py:attribute:: GAUSSIAN
      

      Discrete and/or continuous Gaussian noise is used, depending on the column type.
      Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: AverageMechanism

   Bases: :class:`enum.Enum`

   Possible mechanisms for the average() aggregation.

   Currently, the
   :meth:`~tmlt.analytics.query_builder.GroupedQueryBuilder.average`
   aggregation uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Laplace and/or double-sided geometric noise is used, depending on the
      column type.

   .. py:attribute:: GAUSSIAN
      

      Discrete and/or continuous Gaussian noise is used, depending on the column type.
      Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: VarianceMechanism

   Bases: :class:`enum.Enum`

   Possible mechanisms for the variance() aggregation.

   Currently, the
   :meth:`~tmlt.analytics.query_builder.GroupedQueryBuilder.variance`
   aggregation uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Laplace and/or double-sided geometric noise is used, depending on the
      column type.

   .. py:attribute:: GAUSSIAN
      

      Discrete and/or continuous Gaussian noise is used, depending on the column type.
      Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: StdevMechanism

   Bases: :class:`enum.Enum`

   Possible mechanisms for the stdev() aggregation.

   Currently, the
   :meth:`~tmlt.analytics.query_builder.GroupedQueryBuilder.stdev`
   aggregation uses an additive noise mechanism to achieve differential privacy.





   .. py:attribute:: DEFAULT
      

      The framework automatically selects an appropriate mechanism. This choice
      might change over time as additional optimizations are added to the library.

   .. py:attribute:: LAPLACE
      

      Laplace and/or double-sided geometric noise is used, depending on the
      column type.

   .. py:attribute:: GAUSSIAN
      

      Discrete and/or continuous Gaussian noise is used, depending on the column type.
      Not compatible with pure DP.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: QueryExpr

   Bases: :class:`abc.ABC`

   A query expression, base class for relational operators.

   In most cases, QueryExpr should not be manipulated directly, but rather
   created using :class:`tmlt.analytics.query_builder.QueryBuilder` and then
   consumed by :class:`tmlt.analytics.session.Session`. While they can be
   created and modified directly, this is an advanced usage and is not
   recommended for typical users.

   QueryExpr are organized in a tree, where each node is an operator which
   returns a relation.






   .. py:method:: accept(visitor)
      :abstractmethod:

      Dispatch methods on a visitor based on the QueryExpr type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: PrivateSource

   Bases: :class:`QueryExpr`

   Loads the private source.





   .. py:attribute:: source_id
      :annotation: :str

      The ID for the private source to load.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GetGroups

   Bases: :class:`QueryExpr`

   Returns groups based on the geometric partition selection for these columns.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to get groups for.

   .. py:attribute:: columns
      :annotation: :Optional[List[str]]

      The columns used for geometric partition selection.

      If empty or none are provided, will use all of the columns in the table
      for partition selection.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GetBounds

   Bases: :class:`QueryExpr`

   Returns approximate upper and lower bounds of a column.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to get groups for.

   .. py:attribute:: column
      :annotation: :str

      The column to get bounds of.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Rename

   Bases: :class:`QueryExpr`

   Returns the dataframe with columns renamed.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to apply Rename to.

   .. py:attribute:: column_mapper
      :annotation: :Dict[str, str]

      The mapping of old column names to new column names.

      This mapping can contain all column names or just a subset. If it
      contains a subset of columns, it will only rename those columns
      and keep the other column names the same.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Filter

   Bases: :class:`QueryExpr`

   Returns the subset of the rows that satisfy the condition.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to filter.

   .. py:attribute:: condition
      :annotation: :str

      A string of SQL expression specifying the filter to apply to the data.

      For example, the string "A > B" matches rows where column A is greater than
      column B.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Select

   Bases: :class:`QueryExpr`

   Returns a subset of the columns.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to apply the select on.

   .. py:attribute:: columns
      :annotation: :List[str]

      The columns to select.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Map

   Bases: :class:`QueryExpr`

   Applies a map function to each row of a relation.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to apply the map on.

   .. py:attribute:: f
      :annotation: :Callable[[Row], Row]

      The map function.

   .. py:attribute:: schema_new_columns
      :annotation: :tmlt.analytics._schema.Schema

      The expected schema for new columns produced by ``f``.

   .. py:attribute:: augment
      :annotation: :bool

      Whether to keep the existing columns.

      If True, schema = old schema + schema_new_columns, otherwise only keeps the new
      columns (schema = schema_new_columns).


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.


   .. py:method:: __eq__(other)

      Returns true iff self == other.

      This uses the bytecode of self.f and other.f to determine if the two
      functions are equal.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: FlatMap

   Bases: :class:`QueryExpr`

   Applies a flat map function to each row of a relation.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to apply the flat map on.

   .. py:attribute:: f
      :annotation: :Callable[[Row], List[Row]]

      The flat map function.

   .. py:attribute:: schema_new_columns
      :annotation: :tmlt.analytics._schema.Schema

      The expected schema for new columns produced by ``f``.

      If the ``schema_new_columns`` has a ``grouping_column``, that means this FlatMap
      produces a column that must be grouped by eventually. It also must be the only
      column in the schema.

   .. py:attribute:: augment
      :annotation: :bool

      Whether to keep the existing columns.

      If True, schema = old schema + schema_new_columns, otherwise only keeps the new
      columns (schema = schema_new_columns).

   .. py:attribute:: max_rows
      :annotation: :Optional[int]

      The enforced limit on number of rows from each f(row).


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.


   .. py:method:: __eq__(other)

      Returns true iff self == other.

      This uses the bytecode of self.f and other.f to determine if the two
      functions are equal.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: JoinPrivate

   Bases: :class:`QueryExpr`

   Returns the join of two private tables.

   Before performing the join, each table is truncated based on the corresponding
   :class:`~tmlt.analytics.truncation_strategy.TruncationStrategy`.  For a more
   detailed overview of ``JoinPrivate``'s behavior, see
   :meth:`~tmlt.analytics.query_builder.QueryBuilder.join_private`.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to join with right operand.

   .. py:attribute:: right_operand_expr
      :annotation: :QueryExpr

      The QueryExpr for private source to join with.

   .. py:attribute:: truncation_strategy_left
      :annotation: :Optional[tmlt.analytics.truncation_strategy.TruncationStrategy.Type]

      Truncation strategy to be used for the left table.

   .. py:attribute:: truncation_strategy_right
      :annotation: :Optional[tmlt.analytics.truncation_strategy.TruncationStrategy.Type]

      Truncation strategy to be used for the right table.

   .. py:attribute:: join_columns
      :annotation: :Optional[List[str]]

      The columns used for joining the tables, or None to use all common columns.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: JoinPublic

   Bases: :class:`QueryExpr`

   Returns the join of a private and public table.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to join with public_df.

   .. py:attribute:: public_table
      :annotation: :Union[pyspark.sql.DataFrame, str]

      A DataFrame or public source to join with.

   .. py:attribute:: join_columns
      :annotation: :Optional[List[str]]

      The columns used for joining the tables, or None to use all common columns.

   .. py:attribute:: how
      :annotation: :str = inner

      The type of join to perform. Must be either "inner" or "left".


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.


   .. py:method:: __eq__(other)

      Returns true iff self == other.

      For the purposes of this equality operation, two dataframes are equal
      if they contain the same data, in any order.

      Calling this on a JoinPublic that includes a very large dataframe
      could take a long time or consume a lot of resources, and is not
      recommended.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: AnalyticsDefault

   Default values for each type of column in Tumult Analytics.





   .. py:attribute:: INTEGER
      :annotation: = 0

      The default value used for integers (0).

   .. py:attribute:: DECIMAL
      :annotation: = 0.0

      The default value used for floats (0).

   .. py:attribute:: VARCHAR
      :annotation: = 

      The default value used for VARCHARs (the empty string).

   .. py:attribute:: DATE
      

      The default value used for dates (``datetime.date.fromtimestamp(0)``).

      See :meth:`~.datetime.date.fromtimestamp`.

   .. py:attribute:: TIMESTAMP
      

      The default value used for timestamps (``datetime.datetime.fromtimestamp(0)``).

      See :meth:`~.datetime.datetime.fromtimestamp`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ReplaceNullAndNan

   Bases: :class:`QueryExpr`

   Returns data with null and NaN expressions replaced by a default.

   .. warning::
       after a ``ReplaceNullAndNan`` query has been performed for a column,
       Tumult Analytics will raise an error if you use a
       :class:`~.tmlt.analytics.keyset.KeySet` for that column
       that contains null values.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to replace null/NaN values in.

   .. py:attribute:: replace_with
      :annotation: :Mapping[str, Union[int, float, str, datetime.date, datetime.datetime]]

      New values to replace with, by column.

      If this dictionary is empty, *all* columns will be changed, with values
      replaced by a default value for each column's type (see the
      :class:`~.AnalyticsDefault` class variables).


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ReplaceInfinity

   Bases: :class:`QueryExpr`

   Returns data with +inf and -inf expressions replaced by defaults.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to replace +inf and -inf values in.

   .. py:attribute:: replace_with
      :annotation: :Dict[str, Tuple[float, float]]

      New values to replace with, by column. The first value for each column
      will be used to replace -infinity, and the second value will be used to
      replace +infinity.

      If this dictionary is empty, *all* columns of type DECIMAL will be changed,
      with infinite values replaced with a default value (see the
      :class:`~.AnalyticsDefault` class variables).


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: DropNullAndNan

   Bases: :class:`QueryExpr`

   Returns data with rows that contain null or NaN value dropped.

   .. warning::
       After a ``DropNullAndNan`` query has been performed for a column,
       Tumult Analytics will raise an error if you use a
       :class:`~.tmlt.analytics.keyset.KeySet` for that column
       that contains null values.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr in which to drop nulls/NaNs.

   .. py:attribute:: columns
      :annotation: :List[str]

      Columns in which to look for nulls and NaNs.

      If this list is empty, *all* columns will be looked at - so if *any* column
      contains a null or NaN value that row will be dropped.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: DropInfinity

   Bases: :class:`QueryExpr`

   Returns data with rows that contain +inf/-inf dropped.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr in which to drop +inf/-inf.

   .. py:attribute:: columns
      :annotation: :List[str]

      Columns in which to look for and infinite values.

      If this list is empty, *all* columns will be looked at - so if *any* column
      contains an infinite value, that row will be dropped.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: EnforceConstraint

   Bases: :class:`QueryExpr`

   Enforces a constraint on the data.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to which the constraint will be applied.

   .. py:attribute:: constraint
      :annotation: :tmlt.analytics.constraints.Constraint

      A constraint to be enforced.

   .. py:attribute:: options
      :annotation: :Dict[str, Any]

      Options to be used when enforcing the constraint.

      Appropriate values here vary depending on the constraint. These options are
      to support advanced use cases, and generally should not be used.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByCount

   Bases: :class:`QueryExpr`

   Returns the count of each combination of the groupby domains.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: output_column
      :annotation: :str = count

      The name of the column to store the counts in.

   .. py:attribute:: mechanism
      :annotation: :CountMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an
      appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByCountDistinct

   Bases: :class:`QueryExpr`

   Returns the count of distinct rows in each groupby domain value.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: columns_to_count
      :annotation: :Optional[List[str]]

      The columns that are compared when determining if two rows are distinct.

      If empty, will count all distinct rows.

   .. py:attribute:: output_column
      :annotation: :str = count_distinct

      The name of the column to store the distinct counts in.

   .. py:attribute:: mechanism
      :annotation: :CountDistinctMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByQuantile

   Bases: :class:`QueryExpr`

   Returns the quantile of a column for each combination of the groupby domains.

   If the column to be measured contains null, NaN, or positive or negative infinity,
   those values will be dropped (as if dropped explicitly via
   :class:`DropNullAndNan` and :class:`DropInfinity`) before the quantile is
   calculated.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: measure_column
      :annotation: :str

      The column to compute the quantile over.

   .. py:attribute:: quantile
      :annotation: :float

      The quantile to compute (between 0 and 1).

   .. py:attribute:: low
      :annotation: :float

      The lower bound for clamping the ``measure_column``.
      Should be less than ``high``.

   .. py:attribute:: high
      :annotation: :float

      The upper bound for clamping the ``measure_column``.
      Should be greater than ``low``.

   .. py:attribute:: output_column
      :annotation: :str = quantile

      The name of the column to store the quantiles in.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByBoundedSum

   Bases: :class:`QueryExpr`

   Returns the bounded sum of a column for each combination of groupby domains.

   If the column to be measured contains null, NaN, or positive or negative infinity,
   those values will be dropped (as if dropped explicitly via
   :class:`DropNullAndNan` and :class:`DropInfinity`) before the sum is
   calculated.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: measure_column
      :annotation: :str

      The column to compute the sum over.

   .. py:attribute:: low
      :annotation: :float

      The lower bound for clamping the ``measure_column``.
      Should be less than ``high``.

   .. py:attribute:: high
      :annotation: :float

      The upper bound for clamping the ``measure_column``.
      Should be greater than ``low``.

   .. py:attribute:: output_column
      :annotation: :str = sum

      The name of the column to store the sums in.

   .. py:attribute:: mechanism
      :annotation: :SumMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an
      appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByBoundedAverage

   Bases: :class:`QueryExpr`

   Returns bounded average of a column for each combination of groupby domains.

   If the column to be measured contains null, NaN, or positive or negative infinity,
   those values will be dropped (as if dropped explicitly via
   :class:`DropNullAndNan` and :class:`DropInfinity`) before the average is
   calculated.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: measure_column
      :annotation: :str

      The column to compute the average over.

   .. py:attribute:: low
      :annotation: :float

      The lower bound for clamping the ``measure_column``.
      Should be less than ``high``.

   .. py:attribute:: high
      :annotation: :float

      The upper bound for clamping the ``measure_column``.
      Should be greater than ``low``.

   .. py:attribute:: output_column
      :annotation: :str = average

      The name of the column to store the averages in.

   .. py:attribute:: mechanism
      :annotation: :AverageMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an
      appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByBoundedVariance

   Bases: :class:`QueryExpr`

   Returns bounded variance of a column for each combination of groupby domains.

   If the column to be measured contains null, NaN, or positive or negative infinity,
   those values will be dropped (as if dropped explicitly via
   :class:`DropNullAndNan` and :class:`DropInfinity`) before the variance is
   calculated.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: measure_column
      :annotation: :str

      The column to compute the variance over.

   .. py:attribute:: low
      :annotation: :float

      The lower bound for clamping the ``measure_column``.
      Should be less than ``high``.

   .. py:attribute:: high
      :annotation: :float

      The upper bound for clamping the ``measure_column``.
      Should be greater than ``low``.

   .. py:attribute:: output_column
      :annotation: :str = variance

      The name of the column to store the variances in.

   .. py:attribute:: mechanism
      :annotation: :VarianceMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an
      appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupByBoundedSTDEV

   Bases: :class:`QueryExpr`

   Returns bounded stdev of a column for each combination of groupby domains.

   If the column to be measured contains null, NaN, or positive or negative infinity,
   those values will be dropped (as if dropped explicitly via
   :class:`DropNullAndNan` and :class:`DropInfinity`) before the
   standard deviation is calculated.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The QueryExpr to measure.

   .. py:attribute:: groupby_keys
      :annotation: :Union[tmlt.analytics.keyset.KeySet, List[str]]

      The keys, or columns list to collect keys from, to be grouped on.

   .. py:attribute:: measure_column
      :annotation: :str

      The column to compute the standard deviation over.

   .. py:attribute:: low
      :annotation: :float

      The lower bound for clamping the ``measure_column``.
      Should be less than ``high``.

   .. py:attribute:: high
      :annotation: :float

      The upper bound for clamping the ``measure_column``.
      Should be greater than ``low``.

   .. py:attribute:: output_column
      :annotation: :str = stdev

      The name of the column to store the stdev in.

   .. py:attribute:: mechanism
      :annotation: :StdevMechanism

      Choice of noise mechanism.

      By DEFAULT, the framework automatically selects an
      appropriate mechanism.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SuppressAggregates

   Bases: :class:`QueryExpr`

   Remove all counts that are less than the threshold.





   .. py:attribute:: child
      :annotation: :QueryExpr

      The aggregate on which to suppress small counts.

      Currently, only GroupByCount is supported.

   .. py:attribute:: column
      :annotation: :str

      The name of the column to suppress.

   .. py:attribute:: threshold
      :annotation: :float

      Threshold. All counts less than this will be suppressed.


   .. py:method:: accept(visitor)

      Visit this QueryExpr with visitor.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: QueryExprVisitor

   Bases: :class:`abc.ABC`

   A base class for implementing visitors for :class:`QueryExpr`.



   .. list-table:: Methods

      * - :meth:`.visit_private_source`
        - Visit a :class:`PrivateSource`.
      * - :meth:`.visit_rename`
        - Visit a :class:`Rename`.
      * - :meth:`.visit_filter`
        - Visit a :class:`Filter`.
      * - :meth:`.visit_select`
        - Visit a :class:`Select`.
      * - :meth:`.visit_map`
        - Visit a :class:`Map`.
      * - :meth:`.visit_flat_map`
        - Visit a :class:`FlatMap`.
      * - :meth:`.visit_join_private`
        - Visit a :class:`JoinPrivate`.
      * - :meth:`.visit_join_public`
        - Visit a :class:`JoinPublic`.
      * - :meth:`.visit_replace_null_and_nan`
        - Visit a :class:`ReplaceNullAndNan`.
      * - :meth:`.visit_replace_infinity`
        - Visit a :class:`ReplaceInfinity`.
      * - :meth:`.visit_drop_null_and_nan`
        - Visit a :class:`DropNullAndNan`.
      * - :meth:`.visit_drop_infinity`
        - Visit a :class:`DropInfinity`.
      * - :meth:`.visit_enforce_constraint`
        - Visit a :class:`EnforceConstraint`.
      * - :meth:`.visit_get_groups`
        - Visit a :class:`GetGroups`.
      * - :meth:`.visit_get_bounds`
        - Visit a :class:`GetBounds`.
      * - :meth:`.visit_groupby_count`
        - Visit a :class:`GroupByCount`.
      * - :meth:`.visit_groupby_count_distinct`
        - Visit a :class:`GroupByCountDistinct`.
      * - :meth:`.visit_groupby_quantile`
        - Visit a :class:`GroupByQuantile`.
      * - :meth:`.visit_groupby_bounded_sum`
        - Visit a :class:`GroupByBoundedSum`.
      * - :meth:`.visit_groupby_bounded_average`
        - Visit a :class:`GroupByBoundedAverage`.
      * - :meth:`.visit_groupby_bounded_variance`
        - Visit a :class:`GroupByBoundedVariance`.
      * - :meth:`.visit_groupby_bounded_stdev`
        - Visit a :class:`GroupByBoundedSTDEV`.
      * - :meth:`.visit_suppress_aggregates`
        - Visit a :class:`SuppressAggregates`.




   .. py:method:: visit_private_source(expr)
      :abstractmethod:

      Visit a :class:`PrivateSource`.


   .. py:method:: visit_rename(expr)
      :abstractmethod:

      Visit a :class:`Rename`.


   .. py:method:: visit_filter(expr)
      :abstractmethod:

      Visit a :class:`Filter`.


   .. py:method:: visit_select(expr)
      :abstractmethod:

      Visit a :class:`Select`.


   .. py:method:: visit_map(expr)
      :abstractmethod:

      Visit a :class:`Map`.


   .. py:method:: visit_flat_map(expr)
      :abstractmethod:

      Visit a :class:`FlatMap`.


   .. py:method:: visit_join_private(expr)
      :abstractmethod:

      Visit a :class:`JoinPrivate`.


   .. py:method:: visit_join_public(expr)
      :abstractmethod:

      Visit a :class:`JoinPublic`.


   .. py:method:: visit_replace_null_and_nan(expr)
      :abstractmethod:

      Visit a :class:`ReplaceNullAndNan`.


   .. py:method:: visit_replace_infinity(expr)
      :abstractmethod:

      Visit a :class:`ReplaceInfinity`.


   .. py:method:: visit_drop_null_and_nan(expr)
      :abstractmethod:

      Visit a :class:`DropNullAndNan`.


   .. py:method:: visit_drop_infinity(expr)
      :abstractmethod:

      Visit a :class:`DropInfinity`.


   .. py:method:: visit_enforce_constraint(expr)
      :abstractmethod:

      Visit a :class:`EnforceConstraint`.


   .. py:method:: visit_get_groups(expr)
      :abstractmethod:

      Visit a :class:`GetGroups`.


   .. py:method:: visit_get_bounds(expr)
      :abstractmethod:

      Visit a :class:`GetBounds`.


   .. py:method:: visit_groupby_count(expr)
      :abstractmethod:

      Visit a :class:`GroupByCount`.


   .. py:method:: visit_groupby_count_distinct(expr)
      :abstractmethod:

      Visit a :class:`GroupByCountDistinct`.


   .. py:method:: visit_groupby_quantile(expr)
      :abstractmethod:

      Visit a :class:`GroupByQuantile`.


   .. py:method:: visit_groupby_bounded_sum(expr)
      :abstractmethod:

      Visit a :class:`GroupByBoundedSum`.


   .. py:method:: visit_groupby_bounded_average(expr)
      :abstractmethod:

      Visit a :class:`GroupByBoundedAverage`.


   .. py:method:: visit_groupby_bounded_variance(expr)
      :abstractmethod:

      Visit a :class:`GroupByBoundedVariance`.


   .. py:method:: visit_groupby_bounded_stdev(expr)
      :abstractmethod:

      Visit a :class:`GroupByBoundedSTDEV`.


   .. py:method:: visit_suppress_aggregates(expr)
      :abstractmethod:

      Visit a :class:`SuppressAggregates`.







